# talons

./: .gitignore  .testr.conf  .travis.yml  AUTHORS  README.md  README.rst  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
talons/: compat.py  exc.py  helpers.py
talons/auth/: README.md  __init__.py  base.py  basicauth.py  external.py  htpasswd.py  httpheader.py  interfaces.py  middleware.py
talons/auth/authenticate/: README.md  external.py  htpasswd.py
talons/auth/identify/: README.md  basicauth.py  httpheader.py
tests/: base.py  test_helpers.py
tests/auth/: test_basicauth.py  test_create_middleware.py  test_external.py  test_htpasswd.py  test_httpheader.py  test_resource_action.py
tests/auth/authenticate/: test_external.py  test_htpasswd.py
tests/auth/identify/: test_basicauth.py  test_httpheader.py
