[metadata]
name = talons
version = 0.1.0
summary = Hooks for Falcon
description-file =
    README.md
author = Jay Pipes
author-email = jaypipes@gmail.com
home-page = http://github.com/talons/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Source Control Management
    Topic :: System :: Developer Tools

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    talons

[pbr]
skip_changelog = true
