[metadata]
name = talons
version = 0.1
summary = Hooks for Falcon
description-file = README.md
author = Jay Pipes
author-email = jaypipes@gmail.com
home-page = http://github.com/talons/talons
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3.3
    Topic :: System :: Developer Tools
keywords =
    falcon
    middleware
zip_safe = true

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    talons
    talons.auth
namespace_packages =
    talons
    talons.auth

[pbr]
skip_changelog = true
